--- a/helm/charts/amplication/values-prod.yaml
+++ b/helm/charts/amplication/values-prod.yaml
@@ -47,7 +47,7 @@ amplication-server:
 
       #KAFKA
       GENERATE_PULL_REQUEST_TOPIC: git.internal.pull-request.request.0
-      KAFKA_BROKERS: '["b-1.amplication-useast1-p.w0qvj0.c22.kafka.us-east-1.amazonaws.com:9092","b-2.amplication-useast1-p.w0qvj0.c22.kafka.us-east-1.amazonaws.com:9092"]'
+      KAFKA_BROKERS: '["b-1.amplicationuseast1pro.sb17jm.c22.kafka.us-east-1.amazonaws.com:9092","b-2.amplicationuseast1pro.sb17jm.c22.kafka.us-east-1.amazonaws.com:9092"]'
       KAFKA_CLIENT_ID: amplication-server
       KAFKA_GROUP_ID: amplication-server-group
 
@@ -93,7 +93,7 @@ amplication-git-push-webhook-service:
   config:
     env:
       #KAFKA
-      KAFKA_BROKERS: '["b-1.amplication-useast1-p.w0qvj0.c22.kafka.us-east-1.amazonaws.com:9092","b-2.amplication-useast1-p.w0qvj0.c22.kafka.us-east-1.amazonaws.com:9092"]'
+      KAFKA_BROKERS: '["b-1.amplicationuseast1pro.sb17jm.c22.kafka.us-east-1.amazonaws.com:9092","b-2.amplicationuseast1pro.sb17jm.c22.kafka.us-east-1.amazonaws.com:9092"]'
       KAFKA_REPOSITORY_PUSH_QUEUE: git.external.push.event.0
       KAFKA_CLIENT_ID: git-push-webhook-service
       KAFKA_GROUP_ID: amplication-git-push-webhook-service
@@ -118,7 +118,7 @@ amplication-git-pull-service:
       GITHUB_APP_PRIVATE_KEY: ""
 
       #KAFKA
-      KAFKA_BROKERS: '["b-1.amplication-useast1-p.w0qvj0.c22.kafka.us-east-1.amazonaws.com:9092","b-2.amplication-useast1-p.w0qvj0.c22.kafka.us-east-1.amazonaws.com:9092"]'
+      KAFKA_BROKERS: '["b-1.amplicationuseast1pro.sb17jm.c22.kafka.us-east-1.amazonaws.com:9092","b-2.amplicationuseast1pro.sb17jm.c22.kafka.us-east-1.amazonaws.com:9092"]'
       KAFKA_CLIENT_ID: git-pull-service
       KAFKA_GROUP_ID: git-pull-service-group
 
@@ -130,7 +130,7 @@ amplication-git-pull-request-service:
   config:
     env:
       #KAFKA
-      KAFKA_BROKERS: '["b-1.amplication-useast1-p.w0qvj0.c22.kafka.us-east-1.amazonaws.com:9092","b-2.amplication-useast1-p.w0qvj0.c22.kafka.us-east-1.amazonaws.com:9092"]'
+      KAFKA_BROKERS: '["b-1.amplicationuseast1pro.sb17jm.c22.kafka.us-east-1.amazonaws.com:9092","b-2.amplicationuseast1pro.sb17jm.c22.kafka.us-east-1.amazonaws.com:9092"]'
       KAFKA_CLIENT_ID: git-pull-request-service
       KAFKA_GROUP_ID: git-pull-request-service-group
       GENERATE_PULL_REQUEST_TOPIC: git.internal.pull-request.request.0
@@ -149,7 +149,7 @@ amplication-storage-gateway:
   config:
     env:
       #KAFKA
-      KAFKA_BROKERS: '["b-1.amplication-useast1-p.w0qvj0.c22.kafka.us-east-1.amazonaws.com:9092","b-2.amplication-useast1-p.w0qvj0.c22.kafka.us-east-1.amazonaws.com:9092"]'
+      KAFKA_BROKERS: '["b-1.amplicationuseast1pro.sb17jm.c22.kafka.us-east-1.amazonaws.com:9092","b-2.amplicationuseast1pro.sb17jm.c22.kafka.us-east-1.amazonaws.com:9092"]'
 
       #EFS
       BASE_BUILDS_FOLDER: /amplication-data/build-data
