--- a/helm/charts/amplication/values-shimi.yaml
+++ b/helm/charts/amplication/values-shimi.yaml
@@ -1,3 +1,9 @@
+global:
+  pvc:
+    name: shimi-efs-claim
+  pv:
+    name: shimi-efs-pv
+
 cp-helm-charts:
   enabled: true
   cp-kafka:
@@ -7,11 +13,6 @@ cp-helm-charts:
 
 postgres:
   install: true
-  postgresqlPassword: postgres
-  postgresqlPostgresPassword: postgres
-  postgresqlDatabase: amplication
-  fullnameOverride: postgresql
-
 
 amplication-client:
   service:
@@ -24,13 +25,9 @@ amplication-client:
       REACT_APP_STORAGE_GATEWAY_URL: https://server-shimi.amplication-dev.com
 
 amplication-server:
-  postgres:
-    install: false
   ingress:
     enabled: true
     hostname: server-shimi.amplication-dev.com
-  pvc:
-    name: shimi-efs-claim
   config:
     env:
 
@@ -74,8 +71,6 @@ amplication-server:
       GITHUB_REDIRECT_URI: "https://server-shimi.amplication-dev.com/github/callback"
 
 amplication-git-push-webhook-service:
-  postgres:
-    install: false
   ingress:
     enabled: true
     hostname: webhook-shimi.amplication-dev.com
@@ -87,10 +82,6 @@ amplication-git-push-webhook-service:
       KAFKA_GROUP_ID: amplication-git-push-webhook-service
 
 amplication-git-pull-service:
-  postgres:
-    install: false
-  pvc:
-    name: shimi-efs-claim
   config:
     env:
       NODE_ENV: "production"
@@ -111,8 +102,6 @@ amplication-git-pull-service:
       KAFKA_REPOSITORY_PUSH_QUEUE: git.external.push.event.0
 
 amplication-git-pull-request-service:
-  pvc:
-    name: shimi-efs-claim
   config:
     env:
       KAFKA_BROKERS: '["amplication-shimi-cp-kafka-headless:9092"]'
@@ -125,8 +114,6 @@ amplication-git-pull-request-service:
 amplication-storage-gateway:
   ingress:
     hostname: server-shimi.amplication-dev.com
-  pvc:
-    name: shimi-efs-claim
   config:
     env:
       KAFKA_BROKERS: '["amplication-shimi-cp-kafka-headless:9092"]'
