--- a/helm/charts/amplication/values-common.yaml
+++ b/helm/charts/amplication/values-common.yaml
@@ -6,7 +6,15 @@ global:
   pv:
     name: common-efs-pv-custom
     handle: fs-0a87872138ddc7f6d::fsap-0e0ed55af55fbdf11
-
+  postgres:
+    install: true
+    postgresqlPassword: postgres
+    postgresqlPostgresPassword: postgres
+    postgresqlDatabase: amplication
+    fullnameOverride: postgresql
+    image: groundnuty/k8s-wait-for:v1.3
+    imagePullPolicy: Always
+    
 cp-helm-charts:
   enabled: true
   cp-kafka:
@@ -53,12 +61,6 @@ cp-helm-charts:
   cp-ksql-server:
     enabled: false
 
-postgres:
-  install: true
-  postgresqlPassword: postgres
-  postgresqlPostgresPassword: postgres
-  postgresqlDatabase: amplication
-  fullnameOverride: postgresql
 
 amplication-client:
   image:
