--- a/helm/charts/amplication/values-staging.yaml
+++ b/helm/charts/amplication/values-staging.yaml
@@ -6,6 +6,9 @@ global:
     handle: fs-0a87872138ddc7f6d::fsap-0369ff368700f58c3
   postgres:
     install: false
+  init-job:
+    name: staging
+
 
 cp-helm-charts:
   enabled: false
