--- a/helm/charts/services/amplication-git-pull-service/templates/job.yaml
+++ b/helm/charts/services/amplication-git-pull-service/templates/job.yaml
@@ -15,7 +15,7 @@ spec:
         imagePullPolicy: {{ .Values.global.postgres.imagePullPolicy }}
         args:
           - "pod"
-          - "amplication-{{ .Values.global.init-job.name }}-postgresql-0"
+          - "amplication-{{ .Values.global.init-job.name }}-postgres-0"
       {{ end }}
       containers:
       - name: "{{ .Values.name }}-migrate"
