--- a/helm/charts/amplication/values-prod.yaml
+++ b/helm/charts/amplication/values-prod.yaml
@@ -6,7 +6,7 @@ global:
     handle: fs-0d4fb7d4e763c5fd0::fsap-0ed941c62eddef61c
   postgres:
     install: false
-  init-job:
+  initJob:
     name: prod
 
 
