--- a/helm/charts/amplication/values-common.yaml
+++ b/helm/charts/amplication/values-common.yaml
@@ -14,7 +14,7 @@ global:
     fullnameOverride: postgresql
     image: groundnuty/k8s-wait-for:v1.3
     imagePullPolicy: Always
-  init-job:
+  initJob:
     name: common
 
 cp-helm-charts:
