--- a/helm/charts/services/amplication-server/templates/job.yaml
+++ b/helm/charts/services/amplication-server/templates/job.yaml
@@ -9,15 +9,15 @@ spec:
       name: "{{ .Values.name }}-migrate"
     spec:
       restartPolicy: Never
-      {{ if .Values.global.postgres.install }}
-      initContainers:
-      - name: wait-for-postgres-connection
-        image: {{ .Values.global.postgres.image }}
-        imagePullPolicy: {{ .Values.global.postgres.imagePullPolicy }}
-        args:
-          - "pod"
-          - "amplication-{{ .Values.global.initJob.name }}-postgres-0"
-      {{ end }}
+      # {{ if .Values.global.postgres.install }}
+      # initContainers:
+      # - name: wait-for-postgres-connection
+      #   image: {{ .Values.global.postgres.image }}
+      #   imagePullPolicy: {{ .Values.global.postgres.imagePullPolicy }}
+      #   args:
+      #     - "pod"
+      #     - "postgresql-0"
+      # {{ end }}
       containers:
       - name: "{{ .Values.name }}-migrate"
         image: "{{ .Values.image.repository }}:{{ .Values.image.tag | default .Chart.AppVersion }}"
