--- a/helm/charts/amplication/values-prod.yaml
+++ b/helm/charts/amplication/values-prod.yaml
@@ -2,7 +2,7 @@ global:
   pvc:
     name: prod-efs-claim
   pv:
-    name: prod-efs-pv
+    name: efs-pv-prod
     handle: fs-0d4fb7d4e763c5fd0::fsap-0ed941c62eddef61c
 postgres:
   install: false
