--- a/helm/charts/amplication/values-staging.yaml
+++ b/helm/charts/amplication/values-staging.yaml
@@ -2,7 +2,7 @@ global:
   pvc:
     name: staging-efs-claim
   pv:
-    name: staging-efs-pv
+    name: efs-pv-staging
     handle: fs-0a87872138ddc7f6d::fsap-0369ff368700f58c3
 postgres:
   install: false
