rollback pvc to amplication-server

--- a/helm/charts/services/amplication-server/values.yaml
+++ b/helm/charts/services/amplication-server/values.yaml
@@ -37,3 +37,9 @@ maxMemory: "2Gi"
 minMemory: "2Gi"
 maxCPU: 1
 minCPU: 1
+
+pvc:
+  name: efs-claim
+  storageRequest: 1Gi
+  storageName: efs-sc
+
