--- a/helm/charts/services/amplication-server/templates/deployment.yaml
+++ b/helm/charts/services/amplication-server/templates/deployment.yaml
@@ -53,7 +53,7 @@ spec:
       volumes:
         - name: {{ .Values.volume.name }}
           persistentVolumeClaim:
-            claimName: {{ .Values.global.pvc.name }}
+            claimName: {{ .Values.pvc.name }}
         - name: {{ .Values.volume.name }}-secret
           secret:
             secretName: gcp-secret
