--- a/packages/amplication-code-gen-types/package.json
+++ b/packages/amplication-code-gen-types/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@amplication/code-gen-types",
   "version": "0.14.1",
-  "private": true,
+  "description": "This library supplies all the contracts for Amplication Code Generation. The purpose is to make the contracts available for inclusion in plugins.",
   "main": "dist/index.js",
   "author": {
     "name": "Amplication",
