add code gen to index

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "generate": "run-s generate-graphql-schema generate-graphql-code",
     "build-storybook": "lerna run build-storybook",
     "generate-test-data-service": "lerna run --scope @amplication/data-service-generator generate-test-data-service",
+    "generate-code": "lerna run --scope @amplication/data-service-generator generate-code",
     "setup:dev": "ts-node ./script/setup.ts",
     "docker:dev": "docker-compose -f docker-compose.dev.yml up -d"
   },
