import config module globally, remove secondary sources

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -51,6 +51,24 @@
       "cwd": "${workspaceFolder}/packages/amplication-data-service-generator/generated",
       "skipFiles": ["<node_internals>/**"],
       "type": "node"
+    },
+    {
+      "type": "node",
+      "request": "launch",
+      "name": "Debug Build Manager",
+      "args": [
+          "${workspaceFolder}/packages/amplication-build-manager-service/src/main.ts"
+      ],
+      "runtimeArgs": [
+          "--nolazy",
+          "-r",
+          "ts-node/register",
+          "-r",
+          "tsconfig-paths/register"
+      ],
+      "sourceMaps": true,
+      "envFile": "${workspaceFolder}/packages/amplication-build-manager-service/.env",
+      "cwd": "${workspaceRoot}/packages/amplication-build-manager-service"
     }
   ]
 }
