--- a/packages/amplication-build-manager-service/.env
+++ b/packages/amplication-build-manager-service/.env
@@ -9,3 +9,5 @@ BUILD_CONTEXT_S3_LOCATION='/build-contexts'
 
 BUILD_ARTIFACT_S3_BUCKET='amplication-dsg-dev'
 BUILD_ARTIFACT_S3_LOCATION='/build-artifacts'
+
+CODE_BUILD_PROJECT_NAME='code-generator'
