--- a/packages/amplication-build-manager-service/.env
+++ b/packages/amplication-build-manager-service/.env
@@ -5,9 +5,9 @@ KAFKA_CLIENT_ID='code-gen-manager'
 BUILD_CONTEXT_FS_LOCATION='/home/eugene/build-contexts'
 
 BUILD_CONTEXT_S3_BUCKET='amplication-dsg-dev'
-BUILD_CONTEXT_S3_LOCATION='/build-contexts'
+BUILD_CONTEXT_S3_LOCATION='build-contexts'
 
 BUILD_ARTIFACT_S3_BUCKET='amplication-dsg-dev'
-BUILD_ARTIFACT_S3_LOCATION='/build-artifacts'
+BUILD_ARTIFACT_S3_LOCATION='build-artifacts'
 
 CODE_BUILD_PROJECT_NAME='code-generator'
