Run renovate once per weekend

--- a/renovate.json
+++ b/renovate.json
@@ -1,9 +1,10 @@
 {
   "extends": ["config:base"],
+  "schedule": ["every weekend"],
   "packageRules": [
     {
-      "matchUpdateTypes": ["minor", "patch", "pin", "digest"],
-      "automerge": false,
+      "matchPackagePatterns": ["*"],
+      "matchUpdateTypes": ["minor", "patch"],
       "groupName": "all non-major dependencies",
       "groupSlug": "all-minor-patch"
     },
