Specify only major version for Node alpine images

--- a/ee/packages/amplication-git-pull-service/Dockerfile
+++ b/ee/packages/amplication-git-pull-service/Dockerfile
@@ -1,7 +1,4 @@
-ARG ALPINE_VERSION=alpine3.14
-ARG NODE_VERSION=16.13.1
- 
-FROM node:$NODE_VERSION-$ALPINE_VERSION AS base
+FROM node:16-alpine AS base
 
 RUN apk --no-cache add git
 RUN git config --global --add safe.directory '*'
