--- a/packages/amplication-client/Dockerfile
+++ b/packages/amplication-client/Dockerfile
@@ -1,8 +1,5 @@
-ARG ALPINE_VERSION=alpine3.14
-ARG NODE_VERSION=16.13.1
-ARG NGINX_VERSION=1.20.2-alpine
+FROM node:16-alpine AS base
 
-FROM node:$NODE_VERSION-$ALPINE_VERSION as build
 ARG NPM_VERSION=8.1.2
 ENV NPM_CONFIG_LOGLEVEL=silent
 ENV OPENCOLLECTIVE_HIDE=1
