Pin Dockerfile to minor version

--- a/packages/amplication-scheduler/Dockerfile
+++ b/packages/amplication-scheduler/Dockerfile
@@ -1,4 +1,4 @@
-FROM node:16-alpine as builder
+FROM node:16.16-alpine AS builder
 
 WORKDIR /app
 
@@ -15,7 +15,7 @@ RUN pkg --targets node14-alpine-x64 --output scheduler .
 
 CMD []
 
-FROM alpine
+FROM alpine:3.15
 COPY --from=builder /app/scheduler ./
 RUN apk update && \
   apk add --no-cache libstdc++ libgcc ca-certificates && \
