--- a/packages/amplication-data-service-generator/Dockerfile
+++ b/packages/amplication-data-service-generator/Dockerfile
@@ -1,4 +1,6 @@
-FROM node:16.16-alpine AS build
+ARG NODE_VERSION=16.16-alpine
+
+FROM node:$NODE_VERSION AS build
 
 # Hide Open Collective message from install logs
 ENV OPENCOLLECTIVE_HIDE=1
