--- a/packages/amplication-build-manager-service/.env
+++ b/packages/amplication-build-manager-service/.env
@@ -2,6 +2,8 @@ KAFKA_BROKERS='["localhost:9092"]'
 KAFKA_GROUP_ID='code-gen-manager'
 KAFKA_CLIENT_ID='code-gen-manager'
 
+GENERATE_RESOURCE_TOPIC='build.internal.generate-resource.event.0'
+
 BUILD_CONTEXT_FS_LOCATION='/home/eugene/build-contexts'
 
 BUILD_CONTEXT_S3_BUCKET='amplication-dsg-dev'
