--- a/.github/workflows/argocd/app.yaml
+++ b/.github/workflows/argocd/app.yaml
@@ -3,6 +3,8 @@ kind: Application
 metadata:
   name: APP_NAME_PLACE_HOLER
   namespace: argocd
+  annotations:
+    argocd.argoproj.io/sync-options: Prune=false
 spec:
   project: default
   source:
