--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,18 +2,7 @@
   "cSpell.words": [
     "Amplication",
     "Authorizable",
-    "Datagrid",
     "automerge",
-    "Dropzone",
-    "Formik",
-    "IBLOCK",
-    "Octokit",
-    "Queryable",
-    "Repos",
-    "SENDGRID",
-    "Signup",
-    "UNREQUIRED",
-    "Xarrow",
     "camelcase",
     "checkmark",
     "clonedeep",
@@ -34,6 +23,7 @@
     "isequalwith",
     "kafkajs",
     "linkcode",
+    "logform",
     "loglevel",
     "microservices",
     "nestjs",
@@ -51,6 +41,7 @@
     "schemaname",
     "scrollbar",
     "scrollbars",
+    "SENDGRID",
     "Signup",
     "slynova",
     "tablename",
