--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -180,7 +180,7 @@ jobs:
           $COMMAND
 
           #argocd sync app
-          COMMAND="argocd app sync $APP_NAME"
+          COMMAND="argocd app sync $APP_NAME --prune"
           echo "$COMMAND"
           $COMMAND
 
