feat(git-service): add logic

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,19 +1,9 @@
 {
   "cSpell.words": [
+    "amplicationignore",
     "Amplication",
     "Authorizable",
-    "Datagrid",
     "automerge",
-    "Dropzone",
-    "Formik",
-    "IBLOCK",
-    "Octokit",
-    "Queryable",
-    "Repos",
-    "SENDGRID",
-    "Signup",
-    "UNREQUIRED",
-    "Xarrow",
     "camelcase",
     "checkmark",
     "clonedeep",
@@ -51,6 +41,7 @@
     "schemaname",
     "scrollbar",
     "scrollbars",
+    "SENDGRID",
     "Signup",
     "slynova",
     "tablename",
