fix: removed cspell

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,7 +3,18 @@
     "amplicationignore",
     "Amplication",
     "Authorizable",
+    "Datagrid",
     "automerge",
+    "Dropzone",
+    "Formik",
+    "IBLOCK",
+    "Octokit",
+    "Queryable",
+    "Repos",
+    "SENDGRID",
+    "Signup",
+    "UNREQUIRED",
+    "Xarrow",
     "camelcase",
     "checkmark",
     "clonedeep",
