--- a/packages/amplication-build-manager-service/.env
+++ b/packages/amplication-build-manager-service/.env
@@ -3,6 +3,7 @@ KAFKA_GROUP_ID='code-gen-manager'
 KAFKA_CLIENT_ID='code-gen-manager'
 
 GENERATE_RESOURCE_TOPIC='build.internal.generate-resource.event.0'
+BUILD_STATUS_TOPIC='build.internal.build-status.event.0'
 
 BUILD_CONTEXT_FS_LOCATION='/home/eugene/build-contexts'
 
@@ -12,4 +13,4 @@ BUILD_CONTEXT_S3_LOCATION='build-contexts'
 BUILD_ARTIFACT_S3_BUCKET='amplication-dsg-dev'
 BUILD_ARTIFACT_S3_LOCATION='build-artifacts'
 
-CODE_BUILD_PROJECT_NAME='code-generator'
+CODE_BUILD_PROJECT_NAME='code-generator-dev'
