--- a/packages/amplication-build-manager-service/package.json
+++ b/packages/amplication-build-manager-service/package.json
@@ -21,17 +21,17 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
-    "@aws-sdk/client-s3": "^3.113.0",
-    "@aws-sdk/client-codebuild": "^3.100.0",
     "@amplication/kafka": "^0.14.1",
+    "@aws-sdk/client-codebuild": "^3.100.0",
+    "@aws-sdk/client-s3": "^3.113.0",
+    "@nestjs/common": "8.4.3",
     "@nestjs/config": "1.1.5",
-    "@nestjs/common": "^8.0.0",
-    "@nestjs/core": "^8.0.0",
+    "@nestjs/core": "8.2.3",
     "@nestjs/microservices": "^8.4.5",
     "@nestjs/platform-express": "^8.0.0",
+    "jszip": "^3.10.0",
     "reflect-metadata": "^0.1.13",
-    "rimraf": "^3.0.2",
-    "jszip": "^3.10.0"
+    "rimraf": "^3.0.2"
   },
   "devDependencies": {
     "@nestjs/cli": "^8.0.0",
