--- a/helm/charts/services/amplication-git-pull-service/templates/job.yaml
+++ b/helm/charts/services/amplication-git-pull-service/templates/job.yaml
@@ -3,6 +3,7 @@ kind: Job
 metadata:
   name: "{{ .Values.name }}-migrate"
 spec:
+  ttlSecondsAfterFinished: 30
   template:
     metadata:
       name: "{{ .Values.name }}-migrate"
