--- a/.github/actions/find-folders-by/package.json
+++ b/.github/actions/find-folders-by/package.json
@@ -29,16 +29,29 @@
   "scripts": {
     "start": "ts-node src/main.ts",
     "build": "tsc",
-    "posttest": "eslint . --ext .ts --config .eslintrc",
-    "prepare": "npm run build"
+    "prepare": "npm run build",
+    "test": "jest",
+    "check-format": "prettier --check .",
+    "format": "prettier --write .",
+    "lint": "eslint --cache .",
+    "lint:fix": "eslint --fix ."
   },
   "types": "lib/index.d.ts",
   "dependencies": {
-    "@actions/core": "1.9.0"
+    "@actions/core": "1.9.0",
+    "underscore": "1.13.4"
   },
   "devDependencies": {
+    "@types/jest": "28.1.6",
+    "@types/underscore": "1.11.4",
+    "@typescript-eslint/eslint-plugin": "5.31.0",
+    "@typescript-eslint/parser": "5.31.0",
     "eslint": "8.17.0",
+    "eslint-plugin-import": "2.26.0",
+    "jest": "28.1.3",
+    "jest-mock-extended": "2.0.7",
     "prettier": "2.7.1",
+    "ts-jest": "28.0.7",
     "ts-node": "10.8.1",
     "tslib": "^2.4.0",
     "typescript": "4.7.3"
