--- a/packages/amplication-git-pull-request-service/.env
+++ b/packages/amplication-git-pull-request-service/.env
@@ -1,11 +1,8 @@
 # Kafka
 KAFKA_BROKERS='["localhost:9092"]'
 GENERATE_PULL_REQUEST_TOPIC="git.pr.generate.message"
-KAFKA_CLIENT_ID"=git-pull-request"
+KAFKA_CLIENT_ID="git-pull-request"
 KAFKA_GROUP_ID="amplication-git-pull-request-service"
 
 # GitHub:
 GITHUB_APP_APP_ID=[github-app-app-id]
-
-# BASE_BUILDS_FOLDER 
-BASE_BUILDS_FOLDER=.amplication_temp
