refactor: chagne readme text

--- a/packages/amplication-git-pull-request-service/tsconfig.build.json
+++ b/packages/amplication-git-pull-request-service/tsconfig.build.json
@@ -1,11 +1,4 @@
 {
   "extends": "./tsconfig.json",
-  "exclude": [
-    "node_modules",
-    "test",
-    "dist",
-    "**/*spec.ts",
-    "builds",
-    ".amplication_temp"
-  ]
+  "exclude": ["node_modules", "test", "dist", "**/*spec.ts", "builds"]
 }
