--- a/ee/packages/amplication-git-pull-service/package.json
+++ b/ee/packages/amplication-git-pull-service/package.json
@@ -56,6 +56,7 @@
     "@types/express": "4.17.9",
     "@types/fs-extra": "9.0.13",
     "@types/jest": "26.0.19",
+    "@types/node": "18.6.2",
     "@types/normalize-path": "3.0.0",
     "@types/supertest": "2.0.11",
     "jest": "27.0.6",
