--- a/ee/packages/amplication-git-pull-service/tsconfig.build.json
+++ b/ee/packages/amplication-git-pull-service/tsconfig.build.json
@@ -1,12 +1,4 @@
 {
   "extends": "./tsconfig.json",
-  "exclude": [
-    "node_modules",
-    "prisma",
-    "test",
-    "dist",
-    "**/*spec.ts",
-    "admin",
-    ".amplication_temp"
-  ]
+  "exclude": ["node_modules", "prisma", "test", "dist", "**/*spec.ts", "admin"]
 }
